# DOC-BOT

./: .gitignore  DEPLOYMENT_READY.md  DEPLOY_SYNC_PLAN.md  QDRANT_CLOUD_SETUP.md  README.md  STORAGE_STRATEGY.md  docker-compose.yml
backend/: .env.example  .vercelignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  vercel.json
backend/agents/: audit_logger.py  cache_check.py  citation_formatter.py  clarification.py  finalization.py  generation_node.py  insufficient_evidence.py  mesh_translation.py  post_validation.py  query_understanding.py  reranker.py  response.py  response_generation.py  retrieval.py  retrieval_planner.py  validation.py
backend/api/: chat.py  citations.py  feedback.py  health.py  main.py
backend/cache/: redis_cache.py
backend/core/: config.py  constants.py  logging.py  security.py
backend/db/: minio.py  postgres.py  qdrant.py  redis.py
backend/graph/: builder.py  checkpoints.py  nodes.py  state.py  workflow.py
backend/ingestion/: pubmed.py  scheduler.py  worker.py
backend/llm/: anthropic_provider.py  openai_provider.py  openrouter_provider.py  provider.py
backend/models/: audit.py  schemas.py
backend/retrieval/: chunking.py  embeddings.py  hybrid_search.py  live_search.py  qdrant_store.py  reranking.py
backend/services/: citation_service.py  embedding_service.py  mesh_service.py  retrieval_service.py  validation_service.py
backend/telemetry/: tracing.py
backend/validation/: evidence_validator.py  hallucination_checks.py
frontend/: .vade-report  package-lock.json  package.json  tsconfig.tsbuildinfo
(+22 files in other folders)
