[project]
name = "medical-evidence-retrieval"
version = "0.1.0"
description = "Production-grade multi-agent medical evidence retrieval platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-redis>=0.1.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "qdrant-client>=1.8.0",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "asyncpg>=0.29.0",
    "minio>=7.2.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "fastembed>=0.2.0",
    "lxml>=5.2.0",
    "langchain-text-splitters>=0.2.0",
    "sentence-transformers>=2.7.0",
    "wikipedia>=1.4.0",
    "biopython>=1.83",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "../tests",
]
asyncio_mode = "auto"
